<resources>

    <!--    -->
    <!--English-->
    <!--    -->
    //app basics
    <string name="app_name">SPV</string>
    <string name="empty" />
    <string name="progress_loading">Loading…</string>
    <string name="error_no_net">No internet access. Please check your connection and try again.</string>
    <string name="error_occurred">Failed to connect to the server. Please try again.</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="page_name">Your SPV</string>

    //splash screen
    <string name="ss_name_tag">S.P. Velumani</string>

    //Dialog Fragment
    <string name="alert_button_ok">OK</string>
    <string name="alert_button_cancel">Cancel</string>
    <string name="alert_button_yes">Yes</string>
    <string name="alert_button_no">No</string>
    <string name="progress_bar">Loading</string>

    //fcm
    <string name="default_notification_channel_id">10001</string>

    //Side item
    <string name="side_menu_sign_in">Sign In</string>
    <string name="side_menu_home">Home</string>
    <string name="side_menu_spv">Your SPV</string>
    <string name="side_menu_gallery">Gallery</string>
    <string name="side_menu_nama">Namakaaga Initiatives</string>
    <string name="side_menu_party">Party</string>
    <string name="side_menu_blog">Blog</string>
    <string name="side_menu_settings">Settings</string>
    <string name="side_menu_log_out">Logout</string>

    //menu item
    <string name="title_home">Home</string>
    <string name="title_news">News</string>
    <string name="title_events">Events</string>
    <string name="title_social_initiatives">Social Initiatives</string>
    <string name="title_social_media">Social Media</string>

    //Home Page
    <string name="your_spv">Your SPV</string>
    <string name="gallery">Gallery</string>
    <string name="namakaaga">Namakaaga Initiatives</string>
    <string name="party">Party</string>

    //News Page
    <string name="all_news">All News</string>
    <string name="local_news">Local News</string>
    <string name="state_news">State News</string>

    //News Page
    <string name="all_events">All Events</string>
    <string name="local_events">Local Events</string>
    <string name="state_events">State Events</string>


    <string name="spv_polity">Political Career</string>
    <string name="spv_personal">Personal Life</string>
    <string name="txt_cont">Content Description</string>

    //Namakkaga Initiatives
    <string name="namakaaga_page_title">Namakaaga Initiatives</string>
    <string name="tab_title_1">Namakaaga Ullatchi</string>
    <string name="btn_visit_1">Visit Namakaaga Ullatchi</string>
    <string name="tab_title_2">Amma IAS Academy</string>
    <string name="btn_visit_2">Visit Amma IAS Academy</string>
    <string name="txt_courses">Our Courses</string>
    <string name="txt_header"><![CDATA[Awards & Honors]]></string>

    //Settings
    <string name="sc_title">Settings</string>
    <string name="hd_txt">Account Settings</string>
    <string name="set_title_1">Edit Profile</string>
    <string name="set_title_2">Change Language</string>
    <string name="set_title_3">Subscribe News</string>
    <string name="set_title_4">Push Notification</string>
    <string name="hd_txt_1">More</string>
    <string name="set_title_5">Share this app</string>
    <string name="set_title_6">Rate this app</string>
    <string name="version">Version 1.0</string>

    //Namakkaga Initiatives
    <string name="gal_page">Gallery</string>
    <string name="gallery_photos">Photos</string>
    <string name="gallery_videos">Videos</string>

    <string name="select_language">Choose Your Preferred Language</string>
    <string name="select_language_line_2">Please select your language</string>
    <string name="select_english">English</string>
    <string name="select_tamil">தமிழ்</string>
    <string name="confirm">Update</string>

    <!--    //Profile-->
    <string name="txt_name">Name*</string>
    <string name="txt_ph">Phone Number*</string>
    <string name="txt_mail">Email Id*</string>
    <string name="txt_gen">Gender</string>
    <string name="txt_gen_m">Male</string>
    <string name="txt_gen_ot">Other</string>
    <string name="txt_gen_f">Female</string>
    <string name="save">Save</string>
    <string name="txt_dob">Date of Birth</string>

    //General
    <string name="error_entry">Entry Invalid</string>
    <string name="error_mail">Enter valid mail ID</string>
    <string name="empty_entry">Field cannot be empty</string>
    <string name="lang_title">Change Language</string>

    <!--    Social Frag-->
    <string name="facebook">Facebook</string>
    <string name="twitter">Twitter</string>
    <string name="instagram">Instagram</string>
    <string name="linkedin">LinkedIn</string>

    //Party
    <string name="txt_page">Party</string>
    <string name="party_ideas">Ideology</string>
    <string name="party_history">History</string>
    <string name="party_elec">Elections</string>
    <string name="yr">Election Year</string>

    //Login
    <string name="welcome">Welcome to S.P.V App</string>
    <string name="log_num">+91 | Enter Your Mobile Number</string>
    <string name="btn_txt">Login with OTP</string>
    <string name="pg_title">Mobile Verification</string>
    <string name="verify_content">Please enter the one time password sent to your mobile number</string>
    <string name="otp">OTP</string>
    <string name="verify_code">Verification Code</string>
    <string name="txt_otp">Didnt Receive OTP?</string>
    <string name="resend">Resend</string>
    <string name="btn_otp">Verify</string>

    //Alert Dialogue
    <string name="resend_otp">Resend OTP?</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="mobile_number_tag">: \n</string>


</resources>