<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.NumberVerificationActivity">

    <RelativeLayout
        android:id="@+id/tool"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/tool_bar"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:minHeight="?android:attr/actionBarSize"
            android:layout_alignParentTop="true"
            android:background="@drawable/tool_bg"/>

        <ImageView
            android:id="@+id/img_back"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:contentDescription="@string/app_name"
            android:padding="20dp"
            android:src="@drawable/ic_left_arrow" />

        <TextView
            android:id="@+id/txt_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/img_back"
            android:fontFamily="@font/lato_bold"
            android:layout_centerInParent="true"
            android:text="@string/pg_title"
            android:textColor="@color/white"
            android:textSize="20sp" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="40dp"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/msgIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_spv_otp_icon"
            android:layout_gravity="center"
            android:layout_marginTop="100dp"/>

        <TextView
            android:id="@+id/code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/lato_bold"
            android:text="@string/verify_code"
            android:textColor="@color/txt_black"
            android:textSize="20sp"/>

        <TextView
            android:id="@+id/otpCont"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginHorizontal="40dp"
            android:gravity="center|center_horizontal"
            android:fontFamily="@font/lato_regular"
            android:text="@string/verify_content"
            android:textColor="@color/lt_black"
            android:textSize="14sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/otp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:fontFamily="@font/lato_regular"
                android:text="@string/otp"
                android:textSize="16sp"
                android:textColor="@color/lt_black" />

            <TextView
                android:id="@+id/countdown"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:layout_gravity="start"
                android:text=""
                android:textColor="@color/lt_black"
                android:textSize="14sp"/>

        </LinearLayout>

        <com.hst.spv.customview.CustomOtpEditText
            android:id="@+id/otp_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:inputType="number"
            android:textColor="@color/black"
            app:otp="" />

        <RelativeLayout
            android:id="@+id/resendLay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:gravity="center">

            <TextView
                android:id="@+id/notReceive"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_otp"
                android:textSize="14sp"
                android:textColor="@color/lt_black"/>

            <TextView
                android:id="@+id/resend"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/notReceive"
                android:text="@string/resend"
                android:textColor="@color/tab_indicator"
                android:textSize="14sp"/>

        </RelativeLayout>

        <Button
            android:id="@+id/verify"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/btn_round"
            android:fontFamily="@font/lato_bold"
            android:textAllCaps="false"
            android:text="@string/btn_otp"
            android:textColor="@color/white"
            android:textSize="18sp" />

    </LinearLayout>

</LinearLayout>